Can create games
saves via mnesia

--- a/web/templates/game/show.html.eex
+++ b/web/templates/game/show.html.eex
@@ -1,8 +1,7 @@
 <h2>Show game</h2>
 
-<ul>
-
-</ul>
+<%= @game.id %>
+<%= inspect @game.state %>
 
 <%= link "Edit", to: game_path(@conn, :edit, @game) %>
 <%= link "Back", to: game_path(@conn, :index) %>
