--- a/web/templates/game/edit.html.eex
+++ b/web/templates/game/edit.html.eex
@@ -1,6 +1,10 @@
 <h2>Edit game</h2>
 
-<%= render "form.html", changeset: @changeset,
-                        action: game_path(@conn, :update, @game) %>
+<%= form_for @conn, game_path(@conn, :update, @game.id), [as: :game, method: :put], fn f -> %>
+<div>
+  <%= submit "Update game" %>
+</div>
+<% end %>
+
 
 <%= link "Back", to: game_path(@conn, :index) %>
