populate record for game#index

--- a/web/templates/game/index.html.eex
+++ b/web/templates/game/index.html.eex
@@ -10,6 +10,9 @@
   <tbody>
 <%= for game <- @games do %>
     <tr>
+      <td>
+        <%= game.id %>
+      </td>
 
       <td class="text-right">
         <%= link "Show", to: game_path(@conn, :show, game), class: "btn btn-default btn-xs" %>
