--- a/web/templates/game/edit.html.eex
+++ b/web/templates/game/edit.html.eex
@@ -1,6 +1,29 @@
+<% alias BattleSnakeServer.Snake %>
+<% snake = %Snake{} %>
+
 <h2>Edit game</h2>
 
-<%= form_for @conn, game_path(@conn, :update, @game.id), [as: :game, method: :put], fn f -> %>
+<%= form_for @changeset, game_path(@conn, :update, @game), [method: :put], fn f -> %>
+<div>
+  <%= label :f, :width %>
+  <%= number_input f, :width, readonly: true %>
+</div>
+
+<div>
+  <%= label f, :height %>
+  <%= number_input f, :height, readonly: true %>
+</div>
+
+<%= inputs_for f, :snakes, [append: [snake]], fn g -> %>
+<div>
+  <%= label g, :url %>
+  <%= url_input g, :url %>
+
+  <%= label g, :delete %>
+  <%= checkbox g, :delete %>
+</div>
+<% end %>
+
 <div>
   <%= submit "Update game" %>
 </div>
