--- a/web/templates/game/show.html.eex
+++ b/web/templates/game/show.html.eex
@@ -1,7 +1,7 @@
 <h2>Show game</h2>
 
 <%= @game.id %>
-<%= inspect @game %>
 
+<%= link "Play", to: play_path(@conn, :show, @game) %>
 <%= link "Edit", to: game_path(@conn, :edit, @game) %>
 <%= link "Back", to: game_path(@conn, :index) %>
