continue merging projects
tests pass now!

--- a/web/templates/play/show.html.eex
+++ b/web/templates/play/show.html.eex
@@ -1,5 +1,5 @@
 <script>
-  window.gameId = <%= @game.id %>
+  window.gameId = "<%= @game.id %>"
 </script>
 
 <%= link("Start game", to: "#", data: [js: "game.start"]) %>
