--- a/web/templates/play/board.html.eex
+++ b/web/templates/play/board.html.eex
@@ -3,7 +3,7 @@
 
   <%= content_tag :svg, width: "500px", height: "500px", viewBox: "0 0 #{@world.rows}, #{@world.cols}" do %>
     <%= for y <- 0..@world.rows, x <- 0..@world.cols do %>
-      <%= render "square.html", state: @world, x: x, y: y %>
+      <%= render "square.html", world: @world, x: x, y: y %>
     <% end %>
   <%= end %>
 
