--- a/web/templates/game/new.html.eex
+++ b/web/templates/game/new.html.eex
@@ -2,13 +2,18 @@
 
 <%= form_for @changeset, game_path(@conn, :create), fn f -> %>
 <div>
-  <%= label :width, "width:" %>
+  <%= label :f, :width %>
   <%= number_input f, :width %>
 </div>
 
 <div>
-  <%= label :height, "height:" %>
+  <%= label f, :height %>
   <%= number_input f, :height %>
+</div>
+
+<div>
+  <%= label f, :delay %>
+  <%= number_input f, :delay %>
 </div>
 
 <div>
