Use snake's color on the board

--- a/web/templates/play/board.html.eex
+++ b/web/templates/play/board.html.eex
@@ -14,7 +14,7 @@
           x: point.x,
           width: 1,
           height: 1,
-          fill: :red
+          fill: snake.color
         %>
       <% end %>
 
