Users can select game mode
Allows "game_mode" to be selected when creating a game form.

When the game runs it will actually use the single or multi player game mode
when selected.

--- a/web/templates/game/new.html.eex
+++ b/web/templates/game/new.html.eex
@@ -17,6 +17,16 @@
 </div>
 
 <div>
+  <%= label f, :max_food %>
+  <%= number_input f, :max_food %>
+</div>
+
+<div>
+  <%= label f, :game_mode %>
+  <%= select f, :game_mode, BattleSnake.GameForm.game_modes() %>
+</div>
+
+<div>
   <%= submit "Create game" %>
 </div>
 
