--- a/web/templates/game/edit.html.eex
+++ b/web/templates/game/edit.html.eex
@@ -24,6 +24,11 @@
   <%= number_input f, :max_food %>
 </div>
 
+<div>
+  <%= label f, :game_mode %>
+  <%= select f, :game_mode, BattleSnake.GameForm.game_modes() %>
+</div>
+
 <%= inputs_for f, :snakes, [append: [snake]], fn g -> %>
 <div>
   <%= label g, :url %>
