--- a/web/templates/play/board.html.eex
+++ b/web/templates/play/board.html.eex
@@ -1,38 +1,31 @@
-<% alias BattleSnake.Snake %>
 <div>
   <% width = @world.width %>
   <% height = @world.height %>
-  <div style="display: flex">
-    <%= content_tag :svg, height: "100%", width: "100%", viewBox: "0 0 #{width} #{height}" do %>
-      <%# background %>
-      <%= content_tag :rect, "", y: 0, x: 0, width: width, height: height, fill: "lightgrey" %>
+  <%= content_tag :svg, height: "100%", width: "100%", viewBox: "0 0 #{width} #{height}" do %>
+    <%= content_tag :rect, "", y: 0, x: 0, width: width, height: height, fill: "lightgrey" %>
 
-      <%= for snake <- @world.snakes, {point, index} <- Enum.with_index(snake.coords, 1) do %>
-        <%=
-          content_tag :rect, "",
-          y: point.y,
-          x: point.x,
-          width: 1,
-          height: 1,
-          fill: snake.color,
-          fill_opacity: 1 - index / length(snake.coords) + 0.3
-        %>
-      <% end %>
-
-      <%= for food <- @world.food do %>
-        <%=
-          content_tag :rect, "",
-          y: food.y,
-          x: food.x,
-          width: 1,
-          height: 1,
-          fill: :green
-        %>
-      <% end %>
+    <%= for snake <- @world.snakes, {point, index} <- Enum.with_index(snake.coords, 1) do %>
+      <%=
+      content_tag :rect, "",
+      y: point.y,
+      x: point.x,
+      width: 1,
+      height: 1,
+      fill: snake.color,
+      fill_opacity: 1 - index / length(snake.coords) + 0.3
+      %>
     <% end %>
 
-    <div>
-        <%= content_tag :pre, inspect(@world, pretty: true, width: 80) %>
-    </div>
-  </div>
+    <%= for food <- @world.food do %>
+      <%=
+      content_tag :rect, "",
+      y: food.y,
+      x: food.x,
+      width: 1,
+      height: 1,
+      fill: :green
+      %>
+    <% end %>
+  <% end %>
+  <%= content_tag :pre, Apex.Format.format(%{@state|hist: nil}, color: false) %>
 </div>
