--- a/web/templates/play/board.html.eex
+++ b/web/templates/play/board.html.eex
@@ -1,11 +1,12 @@
 <div>
-  <% width = @world.width %>
-  <% height = @world.height %>
+  <% world = @state.world %>
+  <% width = world.width %>
+  <% height = world.height %>
   <div style="display: flex">
     <%= content_tag :svg, width: "100%", height: "100%", style: "flex: 1;", viewBox: "0 0 #{width} #{height}" do %>
       <%= content_tag :rect, "", y: 0, x: 0, width: width, height: height, fill: "lightgrey" %>
 
-      <%= for snake <- @world.snakes, {point, index} <- Enum.with_index(snake.coords, 1) do %>
+      <%= for snake <- world.snakes, {point, index} <- Enum.with_index(snake.coords, 1) do %>
         <%=
         content_tag :rect, "",
         y: point.y,
@@ -17,7 +18,7 @@
         %>
       <% end %>
 
-      <%= for food <- @world.food do %>
+      <%= for food <- world.food do %>
         <%=
         content_tag :rect, "",
         y: food.y,
