Added js for rendering board-viewer

--- a/web/templates/play/show.html.eex
+++ b/web/templates/play/show.html.eex
@@ -9,4 +9,4 @@
 <%= link("▶", to: "#", data: [js: "game.start"]) %>
 <%= link("▶▮", to: "#", data: [js: "game.next"]) %>
 
-<div id="gameBoard"></div>
+<div id="board-viewer"></div>
