Massive stupid commit
- GameServer handles its' own initialization
this means that all the GameForm.Reset and fam modules are dead now (r i p)
- GameServe can be initialized with a game form id, a game form, or a state
- killed game server channel
- moved controls from aforementioned channel into GameAdmin Channel (no client
  yet)

--- a/web/templates/play/show.html.eex
+++ b/web/templates/play/show.html.eex
@@ -2,11 +2,10 @@
   window.gameId = "<%= @game.id %>"
 </script>
 
-
-<%= link("■", to: "#", data: [js: "game.stop"]) %>
-<%= link("▮◀", to: "#", data: [js: "game.prev"]) %>
-<%= link("▮▮", to: "#", data: [js: "game.pause"]) %>
-<%= link("▶", to: "#", data: [js: "game.start"]) %>
-<%= link("▶▮", to: "#", data: [js: "game.next"]) %>
+<%= for request <- BattleSnake.GameAdminChannel.available_requests do %>
+  <span>
+    <a href="#" data-js="<%= request %>"><%= request %></a>
+  </span>
+<% end %>
 
 <div id="board-viewer"></div>
