--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -1,1 +1,11 @@
 /* This file is for your main application css. */
+
+html,
+body,
+main,
+#board-viewer {
+    height: 100%;
+}
+#board-viewer {
+    display: flex;
+}
