--- a/web/templates/board_viewer/board.html.eex
+++ b/web/templates/board_viewer/board.html.eex
@@ -1,7 +1,7 @@
 <% world = @state.world %>
 <% width = world.width %>
 <% height = world.height %>
-<%= content_tag :svg, width: "100%", height: "100%", style: "flex: 1;", viewBox: "0 0 #{width} #{height}" do %>
+<%= content_tag :svg, style: "flex: 1;", viewBox: "0 0 #{width} #{height}" do %>
   <%= content_tag :rect, "", y: 0, x: 0, width: width, height: height, fill: "lightgrey" %>
 
   <%= for snake <- world.snakes, {point, index} <- Enum.with_index(snake.coords, 1) do %>
