--- a/web/static/css/app.scss
+++ b/web/static/css/app.scss
@@ -1,14 +1,13 @@
 /* This file is for your main application css. */
 
+@import "variables";
+@import "game-board";
+
 html,
 body,
-main,
-#board-viewer {
+main {
     height: 100%;
     padding: 0;
     margin: 0;
-}
-
-#board-viewer {
-    display: flex;
+    background-color: $bg-background-color;
 }
