--- a/web/static/css/_variables.scss
+++ b/web/static/css/_variables.scss
@@ -7,3 +7,7 @@ $bg-background-color: $dark-purple;
 
 $game-board-stroke-color: $grey;
 $game-board-stroke-width: 0.5;
+
+$obj-food-bg-color: $orange;
+
+$obj-snake-stroke-width: 0.1;
