--- a/web/templates/board_viewer/board.html.eex
+++ b/web/templates/board_viewer/board.html.eex
@@ -14,21 +14,10 @@
       class: "game-board-table-top") %>
 
   <%= for snake <- world.snakes, {point, index} <- Enum.with_index(snake.coords, 1) do %>
-    <%= content_tag :rect, "",
-    y: point.y,
-    x: point.x,
-    width: 1,
-    height: 1,
-    fill: snake.color,
-    fill_opacity: 1 - index / length(snake.coords) + 0.3 %>
+    <%= raw snake_obj(point, snake, index) %>
   <% end %>
 
-  <%= for food <- world.food do %>
-    <%= content_tag(:rect, "",
-        y: food.y,
-        x: food.x,
-        width: 1,
-        height: 1,
-        fill: :green) %>
+  <%= for x <- world.food do %>
+    <%= raw food_obj(x) %>
   <% end %>
 <% end %>
