Install bourbon-bitters

--- a/web/static/css/app.scss
+++ b/web/static/css/app.scss
@@ -1,5 +1,5 @@
-/* This file is for your main application css. */
-
+@import "bourbon/bourbon";
+@import "base/base";
 @import "variables";
 @import "game-board";
 
