--- a/web/static/css/base/_base.scss
+++ b/web/static/css/base/_base.scss
@@ -1,7 +1,6 @@
 @import "variables";
 
-// Neat Settings -- uncomment if using Neat -- must be imported before Neat
-// @import "grid-settings";
+@import "grid-settings";
 
 @import "buttons";
 @import "forms";
