--- a/web/static/css/base/_variables.scss
+++ b/web/static/css/base/_variables.scss
@@ -21,6 +21,11 @@ $dark-gray: #333;
 $medium-gray: #999;
 $light-gray: #ddd;
 
+$dark-purple: #6a6676;
+$green: #57a4aa;
+$grey: #797784;
+$orange: #f06a53;
+
 // Font Colors
 $base-font-color: $dark-gray;
 $action-color: $blue;
@@ -40,3 +45,18 @@ $form-box-shadow-focus: $form-box-shadow, 0 0 5px adjust-color($action-color, $l
 // Animations
 $base-duration: 150ms;
 $base-timing: ease;
+
+$generic-stroke-width: 0.08;
+$bg-background-color: $dark-purple;
+
+$game-board-stroke-color: $grey;
+$game-board-stroke-width: $generic-stroke-width;
+
+$obj-food-bg-color: $orange;
+
+$obj-snake-stroke-width: 0.3;
+
+// This should be the same as @snake_stroke_width
+$game-board-divider-stroke-length: 0.3;
+$game-board-divider-stroke-width: $generic-stroke-width;
+$game-board-divider-stroke: $grey;
