--- a/web/static/css/base/_variables.scss
+++ b/web/static/css/base/_variables.scss
@@ -22,6 +22,7 @@ $medium-gray: #999;
 $light-gray: #ddd;
 
 $dark-purple: #6a6676;
+$white: white;
 $green: #57a4aa;
 $grey: #797784;
 $orange: #f06a53;
@@ -29,6 +30,7 @@ $orange: #f06a53;
 // Font Colors
 $base-font-color: $dark-gray;
 $action-color: $blue;
+$scoreboard-font-color: $white;
 
 // Border
 $base-border-color: $light-gray;
@@ -60,3 +62,6 @@ $obj-snake-stroke-width: 0.3;
 $game-board-divider-stroke-length: 0.3;
 $game-board-divider-stroke-width: $generic-stroke-width;
 $game-board-divider-stroke: $grey;
+
+$healthbar-height: $base-spacing;
+$healthbar-opacity: 0.2;
