Fix placement of snake taunt.

--- a/web/static/css/_game-board.scss
+++ b/web/static/css/_game-board.scss
@@ -29,9 +29,11 @@
 }
 
 .scoreboard {
+    &-healthbar {
+        position: relative;
+    }
     &-taunt {
         position: absolute;
-        top: $healthbar-height;
         color: $scoreboard-font-color;
     }
     &-snake-name {
