Add svg flag to scoreboard

--- a/web/static/css/_game-board.scss
+++ b/web/static/css/_game-board.scss
@@ -29,6 +29,9 @@
 }
 
 .scoreboard {
+    &-flag {
+        fill: $scoreboard-flag-color;
+    }
     &-healthbar {
         position: relative;
     }
