--- a/web/static/css/app.scss
+++ b/web/static/css/app.scss
@@ -9,5 +9,5 @@ main {
     height: 100%;
     padding: 0;
     margin: 0;
-    background-color: $bg-background-color;
+    background-color: $base-background-color;
 }
