--- a/web/static/css/base/_variables.scss
+++ b/web/static/css/base/_variables.scss
@@ -37,8 +37,13 @@ $base-border-color: $light-gray;
 $base-border: 1px solid $base-border-color;
 
 // Background Colors
-$base-background-color: #fff;
+$base-background-color: $dark-purple;
 $secondary-background-color: tint($base-border-color, 75%);
+
+// Game Board colors
+$scoreboard-flag-color: $grey;
+$game-board-stroke-color: $grey;
+$obj-food-bg-color: $orange;
 
 // Forms
 $form-box-shadow: inset 0 1px 3px rgba(#000, 0.06);
@@ -49,12 +54,9 @@ $base-duration: 150ms;
 $base-timing: ease;
 
 $generic-stroke-width: 0.08;
-$bg-background-color: $dark-purple;
 
-$game-board-stroke-color: $grey;
 $game-board-stroke-width: $generic-stroke-width;
 
-$obj-food-bg-color: $orange;
 
 $obj-snake-stroke-width: 0.3;
 
