--- a/web/templates/board_viewer/board.html.eex
+++ b/web/templates/board_viewer/board.html.eex
@@ -44,6 +44,14 @@
 <div class="scoreboard">
   <%= img_tag "/images/bs-logo-light.svg", class: "scoreboard-logo" %>
 
+  <svg width="100%"
+       height="3em"
+       viewBox="0 0 100 100"
+       class="scoreboard-flag"
+       preserveAspectRatio="none">
+    <polygon points="0 0, 0 100, 100 100, 93, 50, 100 0"></polygon>
+  </svg>
+
   <%= for snake <- snakes do %>
     <div class="scoreboard-snake-name"><%= snake.name %></div>
     <div class="scoreboard-healthbar">
