--- a/web/static/css/base/_variables.scss
+++ b/web/static/css/base/_variables.scss
@@ -38,7 +38,7 @@ $base-border: 1px solid $base-border-color;
 
 // Background Colors
 $base-background-color: $dark-purple;
-$secondary-background-color: tint($base-border-color, 75%);
+$secondary-background-color: $grey;
 
 // Game Board colors
 $scoreboard-flag-color: $grey;
