--- a/web/static/css/app.scss
+++ b/web/static/css/app.scss
@@ -1,3 +1,4 @@
+@import "fonts";
 @import "bourbon/bourbon";
 @import "base/base";
 @import "neat/neat";
@@ -6,6 +7,7 @@
 html,
 body,
 main {
+    font-family: 'Montserrat', sans-serif;
     height: 100%;
     padding: 0;
     margin: 0;
