--- a/web/static/css/_game-board.scss
+++ b/web/static/css/_game-board.scss
@@ -14,15 +14,7 @@ $mobile: new-breakpoint(max-width 480px);
         fill: $secondary-background-color;
     }
     &-table-top {
-        stroke: $game-board-stroke-color;
-        stroke-width: $game-board-stroke-width;
         fill: transparent;
-    }
-    &-divider {
-        stroke: $game-board-divider-stroke;
-        stroke-width: $game-board-divider-stroke-width;
-        stroke-dasharray: $game-board-divider-stroke-length (1 - $game-board-divider-stroke-length);
-        stroke-dashoffset: ($game-board-divider-stroke-length / 2)
     }
 }
 
@@ -40,8 +32,16 @@ $mobile: new-breakpoint(max-width 480px);
     @include media($mobile) {
         @include span-columns(12);
     }
-
+    &-game-info-wrapper {
+        position: relative;
+    }
+    &-game-info {
+        position: absolute;
+        color: $scoreboard-font-color;
+    }
     &-flag {
+        height: 4em;
+        width: 100%;
         fill: $scoreboard-flag-color;
     }
     &-healthbar {
