--- a/web/templates/board_viewer/board.html.eex
+++ b/web/templates/board_viewer/board.html.eex
@@ -84,29 +84,31 @@
   <% end %>
 
   <%= for snake <- dead_snakes do %>
-    <div class="scoreboard-snake-name scoreboard-dead-snake"><%= snake.name %></div>
-    <div class="scoreboard-healthbar">
-      <div class="scoreboard-taunt"><%= snake.taunt %></div>
-      <svg class="scoreboard-healthpoints"
-           preserveAspectRatio="none"
-           viewBox="0 0 100 100">
-        <%= content_tag(:rect,
-            "",
-            fill: snake.color,
-            x: 0,
-            y: 0,
-            height: 100,
-            width: 100,
-            class: "scoreboard-healthpoints-shadow") %>
+    <div class="scoreboard-dead-snake">
+      <div class="scoreboard-snake-name"><%= snake.name %></div>
+      <div class="scoreboard-healthbar">
+        <div class="scoreboard-taunt"><%= snake.taunt %></div>
+        <svg class="scoreboard-healthpoints"
+             preserveAspectRatio="none"
+             viewBox="0 0 100 100">
+          <%= content_tag(:rect,
+              "",
+              fill: snake.color,
+              x: 0,
+              y: 0,
+              height: 100,
+              width: 100,
+              class: "scoreboard-healthpoints-shadow") %>
 
-        <%= content_tag(:rect,
-            "",
-            fill: snake.color,
-            x: 0,
-            y: 0,
-            height: 100,
-            width: snake.health_points) %>
-      </svg>
+          <%= content_tag(:rect,
+              "",
+              fill: snake.color,
+              x: 0,
+              y: 0,
+              height: 100,
+              width: snake.health_points) %>
+        </svg>
+      </div>
     </div>
   <% end %>
 </div>
