switch views between classic (/play) and finals (/skin) views

--- a/web/static/css/app.scss
+++ b/web/static/css/app.scss
@@ -14,3 +14,10 @@ main {
     margin: 0;
     background-color: $base-background-color;
 }
+
+.view-btn {
+    position: absolute; 
+    bottom: 10px;
+    left: 10px;
+}
+     
