--- a/web/templates/game/_form.html.eex
+++ b/web/templates/game/_form.html.eex
@@ -1,5 +1,8 @@
 <% alias BattleSnake.SnakeForm %>
-<% snake = %SnakeForm{} %>
+
+<% initial_empty_snakes = 4 %>
+<% n = max((initial_empty_snakes - length(@form.data.snakes)) - 1, 0) + 1 %>
+<% snakes = List.duplicate(%SnakeForm{}, n)%>
 
 <fieldset>
   <div>
@@ -30,13 +33,20 @@
 
 <fieldset>
   <h3>Snakes</h3>
-  <%= inputs_for @form, :snakes, [append: [snake]], fn g -> %>
-    <div>
-        <%= label g, :url %>
-        <%= url_input g, :url %>
-
-        <%= label g, :delete %>
-        <%= checkbox g, :delete %>
-    </div>
-  <% end %>
+  <table>
+    <thead>
+      <tr>
+        <td>url</td>
+        <td>delete</td>
+      </tr>
+    </thead>
+    <tbody>
+      <%= inputs_for @form, :snakes, [append: snakes], fn g -> %>
+        <tr>
+          <td><%= url_input g, :url %></td>
+          <td><%= checkbox g, :delete %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 </fieldset>
