Move attrs from svg to css
This way i don't need to constantly send this stuff to the client.

--- a/web/static/css/_game-board.scss
+++ b/web/static/css/_game-board.scss
@@ -23,6 +23,11 @@ $mobile: new-breakpoint(max-width 480px);
 }
 
 .obj-snake {
+  height: 1;
+  width: 1;
+  fill: transparent;
+  stroke-linecap: butt;
+  stroke-linejoin: round;
   stroke-width: $obj-snake-stroke-width;
 }
 
