--- a/web/static/css/base/_variables.scss
+++ b/web/static/css/base/_variables.scss
@@ -69,3 +69,6 @@ $healthbar-height: $base-spacing;
 $healthbar-opacity: 0.2;
 
 $dead-snake-opacity: 0.3;
+
+// Breakpoints
+$mobile: new-breakpoint(max-width 480px);
